# TeX

./: .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  README.md  deny.toml  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: backend-audit.md  code-quality.md  editor-intelligence.md  engineering-standard.md  known-limitations.md  phase-0.md  project-build-configuration.md  repository-policy.md  support.md
docs/benchmarks/: README.md  reference-machines.md  result-template.md
docs/plans/: code-review-plan.md  next-roadmap.md  project-audit.md  project.md
docs/research/: target-user-study.md
docs/reviews/: baseline.md  exceptions.md  file-ledger.md  findings.md  oxlint-migration.md  rule-decisions.md  source-register.md  threat-model.md
src/: accessibility.test.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asset_read.rs  bounded_io.rs  build_diagnostics.rs  build_operations.rs  build_system.rs  build_tools.rs  latex_analysis.rs  latex_completion.rs  latex_fixtures.rs  latex_install.rs  latex_project_scan.rs  latex_scan.rs  latex_symbols.rs  lib.rs  pdf_read.rs  persistence.rs  process_support.rs  project_access.rs  project_config.rs  project_files.rs  project_open.rs  project_search.rs  readiness.rs  root_detection.rs  source_edit.rs  source_read.rs  synctex.rs  terminal_system.rs  watch_system.rs  window_management.rs
src/app/: app.tsx
src/domain/: bibtex-catalog.ts  build.ts  (+32 more)
(+275 files in other folders)
