[package]
name = "tauri-native"
version = "0.1.0"
description = "A local-first LaTeX project editor"
authors = ["TeX contributors"]
edition = "2021"
rust-version = "1.88"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde_json = "1.0.150"
atomic-write-file = "0.3.0"
regex = "1"
sha2 = "0.10"
notify = "8"
renamore = "0.3.2"
command-group = "5.0.1"
portable-pty = "0.9.0"
base64 = "0.22.1"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
